# so100-gr00t-research

./: .gitignore  Dockerfile  Dockerfile.cli  Dockerfile.gui  README.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_README.md  demo_tests.py  docker-compose.yml  pytest.ini  requirements.txt  run_tests.py  settings_output.txt  vnc_startup.sh
.devcontainer/: devcontainer.json
ROS2_environment/: Dockerfile  docker-compose.yml  requirements.txt  vnc_rviz2_environment.sh  vnc_startup.sh
VLAutoRecover/: main.py  state.msg
VLAutoRecover/ad/: semantic_judge.py  vector_judge.py
__old__/ros_old/: README.md
__old__/ros_old/src/vla_auto_recover/: setup.cfg  setup.py
__old__/ros_old/src/vla_auto_recover/launch/: all_nodes.launch.py
__old__/ros_old/src/vla_auto_recover/vla_auto_recover/: gr00t_controller_node.py  state_manager_node.py
__old__/ros_old/src/vla_interfaces/msg/: Anomaly.msg
__old__/ros_poc/: README.md
__old__/ros_poc/ROS2_environment/: docker-compose.yml
__old__/ros_poc/config/: prompt.txt
__old__/ros_poc/src/anomaly_detector/scripts/: anomaly_detector_node
__old__/ros_poc/src/bringup/: CMakeLists.txt
__old__/ros_poc/src/gr00t_controller/: package.xml  setup.py
__old__/ros_poc/src/state_manager/: setup.py
__old__/ros_poc/src/vlm_node/: package.xml
__old__/ros_poc/src/vlm_watcher/: package.xml
calibration/old/so100/: main_leader.json
calibration/robots/so100_follower/: white.json
calibration/so100/: main_follower.json
calibration/teleoperators/so100_leader/: black.json
docs/: SystemState.md  nodes_architecture.md  nodes_graph.md  nodes_graph_confirmed.md  project_overview.md  system_state.md
eval/: README.md  evaluate_vlm_performance.py
eval/test/: __init__.py  test_evaluate_vlm_performance.py
example/: exe_policy_lerobot.py
ros/: README.md  run_all_nodes.sh  write_graph_nodes.sh
ros/log_script/: latest_logs.sh  sub_rosout.py  sub_rosout.sh
ros/src/vla_auto_recover/: package.xml  setup.py
ros/src/vla_auto_recover/config/: README.md  action_list.jsonl  prompt.txt
ros/src/vla_auto_recover/launch/: all_nodes.launch.py
ros/src/vla_auto_recover/test/: __init__.py  pytest.ini  test_camera_node.py  test_vlm_monitor_node.py
ros/src/vla_auto_recover/vla_auto_recover/: camera_node.py  gr00t_controller_node.py  state_manager_node.py  vla_controller_node.py  vlm_detector_node.py  vlm_monitor_node.py  vlm_watcher_node.py
ros/src/vla_interfaces/: CMakeLists.txt  package.xml
ros/src/vla_interfaces/msg/: Action.msg  DetectionOutput.msg  DetectionResult.msg  ImagePair.msg  State.msg  SystemState.msg
ros_poc/src/anomaly_detector/: package.xml  setup.py
ros_poc/src/bringup/: package.xml
ros_poc/src/bringup/launch/: hybrid_stack.launch.py
ros_poc/src/gr00t_controller/scripts/: gr00t_controller_node
ros_poc/src/state_manager/: package.xml
ros_poc/src/vla_interfaces/: CMakeLists.txt
ros_poc/src/vlm_node/vlm_node/: vlm_node.py
scripts/: eval_gr00t_so100.py  exe_policy_lerobot1.py
src/: README.md
src/anomaly_detector/anomaly_detector/: anomaly_detector_node.py
src/gr00t_controller/: package.xml  setup.py
src/gr00t_controller/gr00t_controller/: gr00t_controller_node.py  so100_robot.py
src/gr00t_controller/test/: __init__.py  test_gr00t_controller.py
src/state_manager/: package.xml  setup.py
src/state_manager/state_manager/: state_manager_node.py
src/state_manager/test/: __init__.py  test_state_manager.py
src/vla_interfaces/: CMakeLists.txt  package.xml
src/vla_interfaces/msg/: Action.msg  Anomaly.msg  RecoveryVerification.msg  VerificationRequest.msg
src/vlm_node/: setup.py
src/vlm_node/scripts/: vlm_node
src/vlm_node/test/: __init__.py  test_vlm_node.py
src/vlm_node/vlm_node/: vlm_node.py
src/vlm_watcher/: package.xml  setup.py
src/vlm_watcher/vlm_watcher/: vlm_watcher_node.py
tests/: test_utils.py
tests/integration/: test_system_integration.py
utils/: dataset_download_from_hf.py  extract_video_frames.py
vla_auto_recover/: Dockerfile  docker-compose.yml
vla_auto_recover/src/state_manager/scripts/: state_manager_node
vla_auto_recover/src/vla_interfaces/msg/: RecoveryStatus.msg
vla_auto_recover/src/vlm_watcher/vlm_watcher/: vlm_watcher_node.py
(+34 files in other folders)
