<?xml version="1.0"?>
<package format="3">
  <name>gr00t_controller</name>
  <version>0.1.0</version>
  <description>Executes recovery actions on SO-ARM100 using GR00T policy server</description>
  <maintainer email="aoi.kadoya@lt-s.jp">aoi kadoya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>vla_interfaces</exec_depend>
  <exec_depend>lerobot</exec_depend>
  <exec_depend>openai</exec_depend> 
  <exec_depend>gr00t</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
