<?xml version="1.0"?>
<package format="3">
  <name>state_manager</name>
  <version>0.1.0</version>
  <description>FSM that pauses VLA during recovery.</description>
  <maintainer email="aoi.kadoya@lt-s.jp">aoi kadoya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vla_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
