<?xml version="1.0"?>
<package format="2">
  <name>vlm_node</name>
  <version>0.1.0</version>
  <description>VLM node using lerobot for anomaly detection</description>
  <maintainer email="aoi.kadoya@lt-s.jp">aoi kadoya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
